# fake-store-api

./: .env.example  .gitignore  EXCEPTIONS_GUIDE.md  README.md  db.sqlite3  pyproject.toml
apps/accounts/: admin.py  models.py  views.py
apps/authentications/: authentication.py
apps/billings/: admin.py  apps.py  config.py  models.py  permissions.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/billings/tests/: test_services.py
apps/categories/: admin.py  serializers.py  urls.py  views.py
apps/notifications/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/orders/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/products/: admin.py  models.py  serializers.py  urls.py  views.py
apps/products/management/commands/: populate.py
apps/realtime/: apps.py  consumers.py  routing.py  ws_auth.py
apps/utils/: models.py  products.json  script.py
core/: error_formatters.py  exceptions.py  infobip.py
import_products/: script.py
server/: asgi.py  settings.py  urls.py
